Add agentic AI write tools and orchestrator hardening.
Real RAG scores fix grounding retries; orchestrator meta and allowlisted tenant write tools (favorite, apply, visit) flow through Spring with token auth and CI pytest coverage.

Co-authored-by: Cursor <cursoragent@cursor.com>